--- a/Calculator/frontend.html
+++ b/Calculator/frontend.html
@@ -13,6 +13,7 @@
   <body>
     <div class="container">
       <div class="calculator">
+        <h1>Calculator</h1>
         <input type="text" placeholder="0" id="output-screen">
         <button onclick="Clear()">AC</button>
         <button onclick="factorial()">x!</button>
