--- a/Tribute_page/Tribute.html
+++ b/Tribute_page/Tribute.html
@@ -6,8 +6,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Tribute Website | A.P. J Abdul Kalam</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>The Tribute Website | Sir Ratan Tata</title>
+    <link rel="stylesheet" href="tribute.css" />
   </head>
-
+   <body>
+    <div class="container">
+      <div class="content">
+        <section class="top_section">
+          <div class="image_container">
+            <img src="E:\OIBSIP\Tribute_page\ratan-tata.jpg" alt="tribute" />
+          </div>
+          <div>
+            <h1>Sir Ratan Tata</h1>
+            <h4>1937 - </h4>
+          </div>
+        </section>
+        <section class="about_section">
+          <h2>Indian Industrialist and Businessman</h2>
+          <p>
+            <b>Ratan Naval Tata</b>
+            (born 28 December 1937) is an Indian industrialist,
+            philanthropist and former chairman of Tata Sons.
+            He was chairman of the Tata Group from 1990 to 2012,
+            and interim chairman from October 2016 through February 2017.
+            He continues to head its charitable trusts.
+            In 2008, he received the Padma Vibhushan,the second-highest civilian honour in India,
+            after receiving the Padma Bhushan, the third-highest civilian honour in 2000.
+          </p>
+          <p>He is the son of Naval Tata, who was adopted by Ratanji Tata,
+            son of Jamsetji Tata, the founder of the Tata Group.
+            He graduated from the Cornell University College of Architecture with a bachelor's degree in architecture.
+            He joined Tata in 1961, where he worked on the shop floor of Tata Steel.
+            He later succeeded J. R. D. Tata's as chairman of Tata Sons upon the latter's retirement in 1991.
+            Under his tenure the Tata Group acquired Tetley, Jaguar Land Rover, and Corus,
+            in an attempt to turn Tata from a largely India-centric group into a global business.
+            Tata is also one of the largest philanthropists in the world,
+            having donated around 60–65% of his income to charity.
+          </p>
+        </section>
+        <section class="biography_section">
+          <h3>Biographies</h3>
+          <ul>
+            <li>
+              From steel to Cellular by R tata; Paperback Publishers,
+              2005.
+            </li>
+            <li>
+              The wit & Wisdom of Ratan Tata by R Tata; Hay House India,
+              2018.
+            </li>
+            <li>
+              Ratan N. Tata: The Authorized Biography by R Tata;
+              HarperCollins Publications, 2022.
+            </li>
+          </ul>
+        </section>
+        <footer>
+          <p>
+            Read more about Sir Ratan Tata on  <a href="https://en.wikipedia.org/wiki/Ratan_Tata"> Wikipedia.</a>
+          </p>
+        </footer>
+      </div>
+    </div>
+  </body>
 </html>
