--- a/Tribute_page/Tribute.html
+++ b/Tribute_page/Tribute.html
@@ -11,10 +11,13 @@
   </head>
    <body>
     <div class="container">
+      <h1>Tribute Page</h1>
       <div class="content">
-        <section class="top_section">
+        <section class="top_section" itemtype="image">
           <div class="image_container">
-            <img src="E:\OIBSIP\Tribute_page\ratan-tata.jpg" alt="tribute" />
+
+            <img src="E:///OIBSIP///Tribute_page///tata2.jpg" alt="Tribute">
+
           </div>
           <div>
             <h1>Sir Ratan Tata</h1>
@@ -32,7 +35,9 @@
             He continues to head its charitable trusts.
             In 2008, he received the Padma Vibhushan,the second-highest civilian honour in India,
             after receiving the Padma Bhushan, the third-highest civilian honour in 2000.
+
           </p>
+
           <p>He is the son of Naval Tata, who was adopted by Ratanji Tata,
             son of Jamsetji Tata, the founder of the Tata Group.
             He graduated from the Cornell University College of Architecture with a bachelor's degree in architecture.
