--- a/to-do list/frontend.html
+++ b/to-do list/frontend.html
@@ -8,3 +8,46 @@
 
 	<link rel="stylesheet" href="main.css" />
 </head>
+<body>
+
+	<header>
+		<h1>Task List 2023</h1>
+		<form id="new-task-form">
+			<input
+				type="text"
+				name="new-task-input"
+				id="new-task-input"
+				placeholder="Enter the todos: " />
+			<input
+				type="submit"
+				id="new-task-submit"
+				value="Add task" />
+		</form>
+	</header>
+	<main>
+		<section class="task-list">
+			<h2>Tasks</h2>
+
+			<div id="tasks">
+
+				<!-- <div class="task">
+					<div class="content">
+						<input
+							type="text"
+							class="text"
+							value="A new task"
+							readonly>
+					</div>
+					<div class="actions">
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</div>
+				</div> -->
+
+			</div>
+		</section>
+	</main>
+
+	<script src="main.js"></script>
+</body>
+</html>
